avisynth: Remove wrong pts calculation. Fixes Ticket428 (cherry picked from commit 4f123a7d7c8cbf425958e726689c6bdc84605e91)